# solana-smart-trader

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.toml.example  docker-compose.yaml  pyproject.toml
common/: rpc_nodes.py  services.py
monitor/: app.py
order/: README.md  pyproject.toml
parser/: app.py  pyproject.toml
src/common/: config.py  exception.py  services.py  solscan.py  types.py
src/gmgn_auto_trader/: asset.py  db.py  main.py  parse.py  strategy.py
src/gmgn_auto_trader/strategies/: pump_completed.py
src/monitor/: app.py  pyproject.toml
src/parser/: Dockerfile  app.py  parsers.py
src/parser/tests/: test_handle_transaction.py
src/tgbot/: app.py
src/tgbot/templates/: message.jinja
tests/: test_solscan.py
tgbot/: app.py  pyproject.toml
tgbot/templates/: smaple.jinja
tgbot/tests/: test.py
