[project]
name = "monitor"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mkdir700", email = "mkdir700@gmail.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "solana>=0.34.3",
    "solders>=0.21.0",
    "redis>=5.0.8",
    "toml>=0.10.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
